some issues covered

--- a/css/style.css
+++ b/css/style.css
@@ -67,9 +67,17 @@ a.feed-nav-btn.active {
 .btn-rounded {
   border-radius: 50px !important;
 }
-.post {
+.well-lg.post {
   background: #fff;
   border: 1px solid #F0F0F0;
+  padding: 12px 32px;
+  border-radius: 6px;
+}
+
+.post .post-header {
+  font-size: 34px;
+  padding-bottom: 12px;
+  color: #ad9a58;
 }
 .post-description {
   color: #808080;
@@ -87,6 +95,7 @@ a.post-more,
 a.post-author,
 a.post-book {
   color: #AD9A58;
+  text-decoration: none;
 }
 
 .post-author,
@@ -103,9 +112,10 @@ a.post-book {
   padding-top: 25px;
 }
 
-.post-time {
+.post .post-time {
   color: #B2B2B2;
   font-size: 14px;
+  margin-bottom: 0;
 }
 .article-time {
   font-size: 16px;
@@ -187,12 +197,14 @@ a.post-book {
 
 
 .rating-page .subheader-title {
-  padding-bottom: 40px;
+  padding-bottom: 0;
+  margin-bottom: 20px;
+  margin-top: 0;
 }
 
 .rating-page .subheader-text {
   font-size: 16px;
-  margin-bottom: 50px;
+  margin-bottom: 0;
 }
 
 .rating-page a.btn-cta {
@@ -357,8 +369,8 @@ a.post-book {
     margin-top: 50px;
   }
   .rating-page .subheader {
-    margin-top: 100px;
-    margin-bottom: 130px;
+    margin-top: 40px;
+    margin-bottom: 70px;
   }
   .rating-page .participant {
     margin-bottom: 55px;
@@ -483,7 +495,7 @@ a.post-book {
     margin-bottom: 100px;
   }
   .article-header {
-    font-size: 49px;
+    font-size: 40px;
     padding: 30px 0 35px;
   }
   .article blockquote {
